# functional-cpp

./: .gitignore  .gitmodules  .projectile  CMakeLists.txt  Functional.hpp  compile_commands.json
benchmark/: benchmark.cpp
include/: Functional.hpp
src/: main.cpp
tests/: test.cpp  tree_test.cpp
